--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -9,6 +9,27 @@
 }
 
 .App {
+    .logout {
+            display: flex;
+            align-items: center;
+            justify-content: start;
+            margin-top: 1rem;
+            margin-left: 1rem;
+            button {
+                font-size: large;
+                height: 5vh;
+                width: 8vw;
+                border: none;
+                cursor: pointer;
+
+                &:hover {
+                    border-bottom: 0.2rem solid red;
+                    border-top: 0.2rem solid red;
+                    color: red;
+                    transition: 0.3s;
+                }
+            }
+        }
     .home {
         display: flex;
         justify-content: center;
@@ -119,6 +140,7 @@
     }
 
     .dashboard {
+        
         .dropdown {
             display: flex;
             justify-content: center;
@@ -139,13 +161,13 @@
 
         .dash-main {
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
             align-items: center;
             margin-top: 3rem;
-            margin-left: 13rem;
+            margin-left: 29rem;
             border: 0.1rem solid gray;
             padding: 2rem;
-            width: 70vw;
+            width: 40vw;
             border-radius: 1rem;
 
             .dash-content {
@@ -156,6 +178,7 @@
                 gap: 1rem;
 
                 .qnty {
+                    display: flex;
                     button {
                         border: 0.1rem solid gray;
                         border-radius: 0.5rem;
@@ -178,19 +201,63 @@
                 }
             }
         }
-        .cart {
+        .error {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 1rem;
+            p {
+                color: red;
+            }
+        }
+        .list-btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 2rem;
+            button {
+                height: 6vh;
+                width: 10vw;
+                font-size: large;
+                border: none;
+                border-top: 0.1rem solid red;
+                border-bottom: 0.1rem solid red;
+                cursor: pointer;
+
+                &:hover {
+                    color: rgb(255, 193, 35);
+                    border-top: 0.3rem solid red;
+                    border-bottom: 0.3rem solid red;
+                }
+            }
+        }
+    }
+    .list {
+        .lists {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-top: 1rem;
+            .cart {
+                margin: 2rem;
+                border: 0.1rem solid rgb(241, 19, 134);
+                border-radius: 1rem;
+                padding: 2rem;
+                width: 20vw;
+            }
+        }
+        .total{
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            gap: 1rem;
-            background-color: rgb(130, 130, 130);
-            padding: 1rem;
-            border-radius: 1rem;
-
-            h3 {
-                background-color: transparent;
-            }
+            position: fixed;
+            right: 1rem;
+            bottom: 2rem;
+            border-top: 0.1rem solid rgb(0, 255, 136);
+            border-bottom: 0.1rem solid rgb(0, 255, 136);
+            width: 13vw;
+            height: 12vh;
         }
     }
 }
